<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <!-- UI Designer Only ↓ -->
  <string name="local_auth">本地令牌</string>
  <string name="my">我的</string>
  <string name="community_fix">网络加速</string>
  <string name="game_list">库存游戏</string>
  <string name="under_construction">该功能正在开发中，敬请期待</string>
  <string name="login_and_register">登录 / 注册</string>
  <string name="settings">设置</string>
  <string name="edit_profile">编辑资料</string>
  <!-- Guide VPN ↓ -->
  <string name="guide_vpn_title">网络加速需要本地 VPN</string>
  <string name="guide_vpn_desc">您需要授权我们的应用创建 VPN 连接。Watt Toolkit 不会通过远程服务器路由您的流量，所以加速是在您的设备上完成的。如果您轻触 确定，您会看到要求您批准的系统对话框。</string>
  <string name="guide_vpn_btn">创建本地 VPN</string>
  <!-- Guide Export CA Cert ↓ -->
  <string name="ca_cert_title">{0} CA 证书</string>
  <string name="guide_export_ca_cert_desc1">为了使 网络加速 正常工作，需要安装此证书。</string>
  <string name="guide_export_ca_cert_desc2">该证书是唯一的，由您的设备生成，并存储在本地设备上。</string>
  <string name="guide_export_ca_cert_desc3">请保存证书。下一步介绍如何手动安装它。</string>
  <string name="guide_export_ca_cert_btn_save">现在保存它</string>
  <string name="guide_export_ca_cert_btn_install">安装 CA 证书</string>
  <!-- Guide How Install CA Cert ↓ -->
  <string name="guide_how_install_ca_cert_title">如何安装证书？</string>
  <string name="guide_how_install_ca_cert_desc1">1. 打开【安全】设置</string>
  <string name="guide_how_install_ca_cert_desc2">2. 向下滚动到【加密与凭据】</string>
  <string name="guide_how_install_ca_cert_desc3">3. 点击【安装证书】-【CA 证书】</string>
  <string name="guide_how_install_ca_cert_desc4">4. 选择之前保存的【CA 证书】</string>
  <string name="guide_how_install_ca_cert_desc5">5. 忽略警告信息并点击【安装】</string>
  <string name="guide_how_install_ca_cert_btn">打开安全设置</string>
  <!-- CA Cert Status ↓ -->
  <string name="ca_cert_status_installed_system">已安装到系统证书存储区</string>
  <string name="ca_cert_status_installed_user">已安装到用户证书存储区</string>
  <string name="ca_cert_status_installed_user_tip">由于 Android 系统的限制，无法加速 Android 7.0 Nougat+ 构建的应用，即 targetSdkVersion >= 24。</string>
</resources>
