<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:xamarin="http://schemas.xamarin.com/android/xamarin/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/grey_window_background">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"
    xamarin:managedType="AndroidX.ConstraintLayout.Widget.Guideline" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"
    xamarin:managedType="AndroidX.ConstraintLayout.Widget.Guideline" />

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/ivLogo"
    android:layout_width="@dimen/guide_img_size_w"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:adjustViewBounds="true"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:tint="?colorPrimary"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/baseline_settings_applications_black_24"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatImageView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:text="@string/guide_how_install_ca_cert_title"
    android:textColor="@color/text_primary"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/ivLogo"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_how_install_ca_cert_desc1"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_how_install_ca_cert_desc2"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/tvDesc1"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_how_install_ca_cert_desc3"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/tvDesc2"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc4"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_how_install_ca_cert_desc4"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/tvDesc3"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_how_install_ca_cert_desc5"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/tvDesc4"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnDone"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="start|center_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:text="@string/guide_how_install_ca_cert_btn"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="1.0"
    xamarin:managedType="Google.Android.Material.Button.MaterialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>