<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:xamarin="http://schemas.xamarin.com/android/xamarin/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/grey_window_background">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"
    xamarin:managedType="AndroidX.ConstraintLayout.Widget.Guideline" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"
    xamarin:managedType="AndroidX.ConstraintLayout.Widget.Guideline" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/ivLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:cardCornerRadius="32dp"
    app:layout_constraintBottom_toTopOf="@+id/tvTitle"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toTopOf="parent"
    xamarin:managedType="Google.Android.Material.Card.MaterialCardView">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/bg_vpn_shape_gradient"
      android:orientation="horizontal"
      android:paddingStart="@dimen/activity_horizontal_margin"
      android:paddingEnd="@dimen/activity_horizontal_margin">

      <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:adjustViewBounds="true"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24"
        xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatImageView" />

      <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="VPN"
        android:textColor="@android:color/white"
        android:textSize="80dp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,SpUsage"
        xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <!--  <androidx.appcompat.widget.AppCompatImageView-->
  <!--    android:id="@+id/ivLogo"-->
  <!--    android:layout_width="@dimen/guide_img_size_w"-->
  <!--    android:layout_height="wrap_content"-->
  <!--    android:layout_gravity="center_horizontal"-->
  <!--    android:adjustViewBounds="true"-->
  <!--    android:paddingStart="@dimen/activity_horizontal_margin"-->
  <!--    android:paddingEnd="@dimen/activity_horizontal_margin"-->
  <!--    android:tint="?colorPrimary"-->
  <!--    app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
  <!--    app:layout_constraintStart_toStartOf="@+id/guideline_left"-->
  <!--    app:layout_constraintTop_toTopOf="parent"-->
  <!--    app:srcCompat="@drawable/ic_baseline_vpn_key_24"-->
  <!--    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatImageView" />-->

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:text="@string/guide_vpn_title"
    android:textColor="@color/text_primary"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/tvDesc"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvDesc"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/guide_desc_margin_bottom"
    android:gravity="center_horizontal"
    android:lineSpacingExtra="4sp"
    android:text="@string/guide_vpn_desc"
    android:textColor="@color/text_primary"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/btnDone"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    xamarin:managedType="AndroidX.AppCompat.Widget.AppCompatTextView" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btnDone"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:text="@string/guide_vpn_btn"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="1.0"
    xamarin:managedType="Google.Android.Material.Button.MaterialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>